# Touhou_fangame

./: CMakeLists.txt  CMakeLists.txt.in  README.md  conanfile.txt  game.conf  main.cpp  main.hpp  menu.cpp  menu.hpp
DLL FOR WiNDOWS COMPILATION/: README.txt
include/game/: game.h  player.h  world.h
include/menu/: menu.h  options_menu.h
include/objects/: background.h  bullet.h  entity.h
include/system/: audio.h  data.h  input.h  movable.h
src/game/: game.cpp  player.cpp  world.cpp
src/menu/: main_menu.cpp  main_options_menu.cpp  menu.cpp  options_menu.cpp  pause.cpp
src/objects/: background.cpp  bullet.cpp  drawable.cpp
src/system/: clock.cpp  data.cpp  hitbox.cpp  input.cpp  path.cpp  spawner.cpp
